--- a/deno.json
+++ b/deno.json
@@ -1,3 +1,3 @@
 {
-  "tasks": { "dev": "deno run --allow-read --allow-net --watch serve.ts" }
+  "tasks": { "dev": "deno run --allow-read --allow-net --watch=./ serve.ts" }
 }
